# vercel-tokei

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  sync-runtime.sh  vercel.json
.github/: dependabot.yml
.github/workflows/: build.yml  cargo-update.yml  update-cargo-lock.yml  update-runtime.yml
api/: Cargo.toml  build.sh  category.rs  color.rs  content_type.rs  settings.rs  style.rs  tokei.rs  tokei_service.rs
api/tokei/[domain]/[user]/: [repo].rs  color.rs  style.rs  theme.rs
src-rs/: category.rs  color.rs  content_type.rs  lib.rs  settings.rs  style.rs  theme.rs  util.rs
