[package]
edition = "2024"
name = "vercel-tokei"
version = "0.1.0"

[dependencies]
cached = { version = "0.56.0", features = ["async"] }
eyre = "0.6.12"
git2 = "0.20.2"
http = "1.3.1"
lazy-regex = "3.3.0"
markdown = "1.0.0"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.23", default-features = false, features = [
  "charset",
  "http2",
  "macos-system-configuration",
  "native-tls",
] }
rsbadges = { git = "https://github.com/aschey/rsbadges", rev = "9a6035ae5d2b5eb6e0c9e993825ccd3cb8af472f", default-features = false, features = [
  "native-tls",
] }
serde_json = "1.0.142"
strum = "0.27.2"
strum_macros = "0.27.2"
tempfile = "3.20.0"
tokei = "13.0.0-alpha.9"
tokio = { version = "1.47.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5.6"
urlencoding = "2.1.3"
vercel_runtime = "1.1.6"

[lib]
path = "src-rs/lib.rs"

[[bin]]
name = "tokei"
path = "api/tokei/[domain]/[user]/[repo].rs"

[[bin]]
name = "tokei-default"
path = "api/tokei.rs"
