[package]
edition = "2021"
name = "vercel-tokei"
version = "0.1.0"

[dependencies]
badge = "0.3.0"
cached = "0.36.0"
eyre = "0.6.8"
git2 = "0.14.4"
log = "0.4.17"
percent-encoding = "2.1.0"
pretty_env_logger = "0.4.0"
serde_json = "1.0.85"
tempfile = "3.3.0"
tokei = "12.1.2"
url = "2.3.1"
vercel_lambda = "0.2.0"

[lib]
name = "tokei_service"
path = "tokei_service.rs"
