[package]
edition = "2021"
name = "vercel-tokei"
version = "0.1.0"

[dependencies]
cached = "0.39.0"
eyre = "0.6.8"
git2 = "0.15.0"
lazy-regex = "2.3.0"
log = "0.4.17"
percent-encoding = "2.1.0"
pretty_env_logger = "0.4.0"
rsbadges = {git = "https://github.com/aschey/rsbadges", rev = "8fe4b4a9270f324e2155c025a8d0c6acae87fced"}
serde_json = "1.0.85"
strum = "0.24.1"
strum_macros = "0.24.3"
tempfile = "3.3.0"
tokei = "12.1.2"
url = "2.3.1"
urlencoding = "2.1.2"
vercel_lambda = {git = "https://github.com/aschey/vercel-rust", rev = "098e0523b85ccb266b7873dfcff5ff34724b3439"}

[lib]
name = "tokei_service"
path = "tokei_service.rs"
